3821B1PE1/3_naive_gemm_omp/chuvashov_andrey/log.txt
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/3_naive_gemm_omp/chuvashov_andrey/naive_gemm_omp.cpp: In function ‘std::vector<float> NaiveGemmOMP(const std::vector<float>&, const std::vector<float>&, int)’:
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/3_naive_gemm_omp/chuvashov_andrey/naive_gemm_omp.cpp:16:10: error: ‘size_t’ was not declared in this scope; did you mean ‘std::size_t’?
   16 |     for (size_t i = 0; i < n; i++) {
      |          ^~~~~~
      |          std::size_t
In file included from /usr/include/c++/11/bits/stl_algobase.h:59,
                 from /usr/include/c++/11/vector:60,
                 from /home/crazyproger/sandbox/cuda-2024/3821B1PE1/3_naive_gemm_omp/chuvashov_andrey/naive_gemm_omp.h:5,
                 from /home/crazyproger/sandbox/cuda-2024/3821B1PE1/3_naive_gemm_omp/chuvashov_andrey/naive_gemm_omp.cpp:2:
/usr/include/x86_64-linux-gnu/c++/11/bits/c++config.h:280:33: note: ‘std::size_t’ declared here
  280 |   typedef __SIZE_TYPE__         size_t;
      |                                 ^~~~~~
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/3_naive_gemm_omp/chuvashov_andrey/naive_gemm_omp.cpp:16:16: error: expected ‘;’ before ‘i’
   16 |     for (size_t i = 0; i < n; i++) {
      |                ^~
      |                ;
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/3_naive_gemm_omp/chuvashov_andrey/naive_gemm_omp.cpp:16:17: error: ‘i’ was not declared in this scope
   16 |     for (size_t i = 0; i < n; i++) {
      |                 ^
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/3_naive_gemm_omp/chuvashov_andrey/naive_gemm_omp.cpp:16:29: error: expected ‘)’ before ‘;’ token
   16 |     for (size_t i = 0; i < n; i++) {
      |         ~                   ^
      |                             )
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/3_naive_gemm_omp/chuvashov_andrey/naive_gemm_omp.cpp:16:29: error: not enough for loops to collapse
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/3_naive_gemm_omp/chuvashov_andrey/naive_gemm_omp.cpp:16:31: error: ‘i’ was not declared in this scope
   16 |     for (size_t i = 0; i < n; i++) {
      |                               ^
